--- a/index.html
+++ b/index.html
@@ -1,63 +1,66 @@
 <!DOCTYPE html>
 <html lang="ko">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>포트폴리오</title>
-    <link rel="stylesheet" href="./css/reset.css" />
-    <link rel="stylesheet" href="./css/main.css" />
-  </head>
-  <body>
-    <a href="#container" class="skip hidden">본문 바로가기</a>
 
-    <!-- s: header -->
-    <header id="header">
-      <div class="inner">
-        <nav class="nav">
-          <ul class="gnb">
-            <li>
-              <a href="#" class="active">Home</a>
-            </li>
-            <li>
-              <a href="#">About me</a>
-            </li>
-            <li>
-              <a href="#">Work</a>
-            </li>
-            <li>
-              <a href="#">Contact</a>
-            </li>
-          </ul>
-          <span>Kim Soobin</span>
-        </nav>
-      </div>
-    </header>
-    <hr />
-    <!-- e: header  -->
-    <main id="container">
-      <div class="ocean">
-        <div class="title">
-          <h1>Surf</h1>
-          <div class="wrap">
-            <h3>my</h3>
-            <h2>portfolio</h2>
-          </div>
-        </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>포트폴리오.</title>
+  <link rel="stylesheet" href="./css/reset.css" />
+  <link rel="stylesheet" href="./css/main.css" />
+</head>
 
-        <div class="menu">
-          <ul class="menu-list">
-            <li>
-              <a href="#" class="active">About me</a>
-            </li>
-            <li>
-              <a href="#">Work</a>
-            </li>
-            <li>
-              <a href="#">Contact</a>
-            </li>
-          </ul>
+<body>
+  <a href="#container" class="skip hidden">본문 바로가기</a>
+
+  <!-- s: header -->
+  <header id="header">
+    <div class="inner">
+      <nav class="nav">
+        <ul class="gnb">
+          <li>
+            <a href="./index.html" class="active">Home</a>
+          </li>
+          <li>
+            <a href="#">About me</a>
+          </li>
+          <li>
+            <a href="./work.html">Work</a>
+          </li>
+          <li>
+            <a href="#">Contact</a>
+          </li>
+        </ul>
+        <span>Kim Soobin</span>
+      </nav>
+    </div>
+  </header>
+  <hr />
+  <!-- e: header  -->
+  <main id="container">
+    <div class="ocean">
+      <div class="title">
+        <h1>Surf</h1>
+        <div class="wrap">
+          <h3>my</h3>
+          <h2>portfolio</h2>
         </div>
       </div>
-    </main>
-  </body>
+
+      <div class="menu">
+        <ul class="menu-list">
+          <li>
+            <a href="#" class="active">About me</a>
+          </li>
+          <li>
+            <a href="#">Work</a>
+          </li>
+          <li>
+            <a href="#">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </main>
+</body>
+
 </html>
