--- a/work.html
+++ b/work.html
@@ -309,6 +309,12 @@
 
 
     <section class="section section6">
+      <div class="modal" id="modal">
+        <div class="modal-content">
+          <span class="close" id="close">&times;</span>
+          <img src="./img/graphic-haribo.png" alt="modal image" id="modal-img">
+        </div>
+      </div>
       <div class="num-indicator">
         <div class="num-wrap">
           <span class="current-page">1</span>
@@ -339,8 +345,15 @@
 
         </div>
         <div class="bubble-small"></div>
-        <div class="bubble"></div>
+        <div class="bubble">
+          <a class="bubble-content">
+            <img src="./img/ico-view.svg" alt="view">
+            <span>Click!</span>
+          </a>
+        </div>
       </div>
+
+
 
 
 
