메인 마우스 커서

--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
   <link rel="stylesheet" href="./css/main.css" />
   <script src="./js/jquery-3.3.1.min.js"></script>
   <script src="./js/modal.js"></script>
+  <script src="./js/main.js"></script>
 </head>
 
 <body>
   <a href="#container" class="skip hidden">본문 바로가기</a>
-
+  <div id="ripple-container"></div>
   <div class="dim"></div>
   <div class="contact-modal">
     <div class="contact-content">
