--- a/index.html
+++ b/index.html
@@ -57,6 +57,22 @@
   <main id="container">
 
     <div class="ocean">
+
+      <div class="dolphin-wrap">
+        <div class="fish-wrapper">
+          <div class="fish-wrap">
+            <div class="fish">
+            </div>
+          </div>
+        </div>
+        <div class="water-wrapper">
+          <div class="water-wrap">
+            <div class="water">
+            </div>
+          </div>
+        </div>
+      </div>
+
       <figure class="shark-img"><img src="./img/shark.png" alt="tube"></figure>
       <figure class="tube-img"><img src="./img/tube.png" alt="tube"></figure>
       <div class="title">
