myName, 배너이미지 추가

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -47,7 +47,7 @@
             <a href="#" class="contact-btn">Contact</a>
           </li>
         </ul>
-        <span>Kim Soobin</span>
+        <span class="myName">Kim Soobin</span>
       </nav>
     </div>
   </header>
