--- a/work.html
+++ b/work.html
@@ -75,7 +75,7 @@
             <a href="#" class="contact-btn">Contact</a>
           </li>
         </ul>
-        <span>Kim Soobin</span>
+        <span class="myName">Kim Soobin</span>
       </nav>
     </div>
   </header>
@@ -370,7 +370,12 @@
           </div>
           <div class="slide">
             <figure class="project-img">
-              <img src="./img/graphic-haribo.png" alt="haribo" />
+              <img src="./img/graphic-burger.png" alt="haribo" />
+            </figure>
+          </div>
+          <div class="slide">
+            <figure class="project-img">
+              <img src="./img/black.png" alt="haribo" />
             </figure>
           </div>
         </div>
