--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <a href="#" class="contact-btn">Contact</a>
           </li>
         </ul>
-        <span>Kim Soobin</span>
+        <span class="myName">Kim Soobin</span>
       </nav>
     </div>
   </header>
