--- a/work.html
+++ b/work.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="./css/common.css" />
   <link rel="stylesheet" href="./css/sub.css" />
   <script src="./js/jquery-3.3.1.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
   <script src="./js/jquery.fullpage.min.js"></script>
   <script src="./js/aos.js"></script>
   <script src="./js/modal.js"></script>
@@ -119,6 +120,7 @@
           </li>
         </ul>
       </div>
+      <div class="img-box"><img src=""></div>
     </section>
 
     <section class="section section2">
@@ -423,20 +425,10 @@
       </div>
     </section>
 
-    <!-- <section class="section section6">
-      <h2 data-aos="fade-up">banners</h2>
-      <p>ggg</p>
 
-      <div class="main-slider">
-        <div class="slide"> Slide 1 </div>
-        <div class="slide"> Slide 2 </div>
-        <div class="slide"> Slide 3 </div>
-        <div class="slide"> Slide 4 </div>
-      </div>
-    </section> -->
   </main>
 
-  <!-- <button type="button" class="btn-top">TOP</button> -->
+
 </body>
 
 </html>
