--- a/index.html
+++ b/index.html
@@ -9,12 +9,15 @@
   <link rel="stylesheet" href="./css/common.css" />
   <link rel="stylesheet" href="./css/main.css" />
   <script src="./js/jquery-3.3.1.min.js"></script>
-  <script src="./js/modal.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
   <script src="./js/main.js"></script>
+  <script src="./js/modal.js"></script>
 </head>
 
 <body>
   <a href="#container" class="skip hidden">본문 바로가기</a>
+  <div class="cursor"></div>
+  <div class="dive"></div>
   <div id="ripple-container"></div>
   <div class="dim"></div>
   <div class="contact-modal">
