--- a/work.html
+++ b/work.html
@@ -23,8 +23,12 @@
 
   <div class="contact-modal">
     <div class="contact-content">
-      <img src="./img/water.svg" alt="modal image" />
-
+      <!-- <img src="./img/water.svg" alt="modal image" /> -->
+      <div class="ring">
+        <i style="--clr:#B8F0FF;"></i>
+        <i style="--clr:#80B7FF;"></i>
+        <i style="--clr:#86d3e7;"></i>
+      </div>
       <div class="contact-info">
         <h2>Kim Soobin</h2>
         <ul>
