top btn, work 내용 수정

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -106,8 +106,7 @@
             가끔 사이트를 보다 보면 디자인에 너무 초점을 둔 나머지 페이지 간의
             이동이 답답하거나,<br />
             원하는 정보를 찾기 위해 오랜 시간을 헤매야 하는 경우가 있습니다.<br />
-            정보를 바로 보고 싶은데 한참 다른 동작을 수행해야 보이는 경험은
-            누구에게나 불편합니다.<br /><br />
+            <br />
             저는 남녀노소 누구나 편하게 둘러볼 수 있는 사이트를 디자인하고
             싶습니다.<br />
             사용자에게 직관적이고 쉽게 다가갈 수 있는 디자인을 목표로, 항상
@@ -125,6 +124,7 @@
           </ul>
         </section>
       </div>
+      <a href="#" class="top-btn">TOP</a>
     </main>
   </body>
 </html>
