--- a/work.html
+++ b/work.html
@@ -147,9 +147,9 @@
             <h2>01.</h2>
             <h2>별마로 천문대</h2>
             <p>
-              계절이 지나가는 하늘에는 가을로 가득 차 있습니다. 나는 아무 걱정도
-              없이 가을 속의 별들을 다 헬 듯합니다. 가슴 속에 하나 둘 새겨지는
-              별을 이제 다 못 헤는 것은 쉬이 아침이 오는 까닭이요
+              효율적인 컨텐츠의 배치와 관련 이미지의 적극적인 사용을 중점으로
+              하여 별마로 천문대 웹사이트룰 리디자인했고 반응형 사이트로
+              구현하였습니다.
             </p>
           </div>
           <div class="project-info">
@@ -193,7 +193,7 @@
         <figure class="project-img">
           <div class="bubble starship"></div>
           <div class="bubble-small"></div>
-          <img src="./img/byeolmaro.png" alt="byeolmaro" />
+          <img src="./img/starship2.svg" alt="byeolmaro" />
         </figure>
 
         <div class="project-content">
@@ -255,9 +255,10 @@
             <h2>03.</h2>
             <h2>Green Sweet</h2>
             <p>
-              계절이 지나가는 하늘에는 가을로 가득 차 있습니다. 나는 아무 걱정도
-              없이 가을 속의 별들을 다 헬 듯합니다. 가슴 속에 하나 둘 새겨지는
-              별을 이제 다 못 헤는 것은 쉬이 아침이 오는 까닭이요
+              사용자 정보 기반 개인화된 관리 및 다이어리, 상점, 식물사전 등의
+              기능이 분리 되어 있는 등의 개선사항을 보완함과 동시에 직관적이고
+              쉽게 이해할 수 있는 UI를 제공하여 사용자들이 쉽게 식물을 키울 수
+              있도록 도움을 주고자 앱을 기획 및 디자인 했습니다. (팀 프로젝트)
             </p>
           </div>
           <div class="project-info">
@@ -271,13 +272,13 @@
               <li>
                 <dl>
                   <dt>ROLE</dt>
-                  <dd>기획, 디자인, 코딩</dd>
+                  <dd>기획, 디자인</dd>
                 </dl>
               </li>
               <li>
                 <dl>
                   <dt>TOOLS</dt>
-                  <dd>Figma, Vscode</dd>
+                  <dd>Figma</dd>
                 </dl>
               </li>
             </ul>
@@ -402,9 +403,9 @@
             <h2>05.</h2>
             <h2>Graphics</h2>
             <p>
-              계절이 지나가는 하늘에는 가을로 가득 차 있습니다. 나는 아무 걱정도
-              없이 가을 속의 별들을 다 헬 듯합니다. 가슴 속에 하나 둘 새겨지는
-              별을 이제 다 못 헤는 것은 쉬이 아침이 오는 까닭이요
+              포토샵과 일러스트레이터를 활용하여 여러가지 스타일의 배너를
+              디자인하였습니다. 슬라이드 우측 하단 'Click!' 버튼을 통해 해당
+              이미지 원본을 볼 수 있습니다.
             </p>
           </div>
           <div class="project-info">
@@ -418,13 +419,13 @@
               <li>
                 <dl>
                   <dt>ROLE</dt>
-                  <dd>기획, 디자인, 코딩</dd>
+                  <dd>기획, 디자인</dd>
                 </dl>
               </li>
               <li>
                 <dl>
                   <dt>TOOLS</dt>
-                  <dd>Figma, Vscode</dd>
+                  <dd>Photoshop, Illustrator</dd>
                 </dl>
               </li>
             </ul>
