디자인수정

--- a/work.html
+++ b/work.html
@@ -390,7 +390,7 @@
             </div>
           </div>
           <div class="bubble-small"></div>
-          <div class="bubble">
+          <div class="bubble about-bubble">
             <a class="bubble-content">
               <img src="./img/ico-view.svg" alt="view" />
               <span>Click!</span>
