--- a/index.html
+++ b/index.html
@@ -31,8 +31,16 @@
       <div class="contact-info">
         <h2>Kim Soobin</h2>
         <ul>
-          <li>010-1234-5678</li>
-          <li>jwe06120@naver.com</li>
+          <li>010-1234-5678
+            <button class="copy-btn" data-copy-text="010-1234-5678">
+              <span class="copy-icon"></span>
+            </button>
+          </li>
+          <li>jwe06120@naver.com
+            <button class="copy-btn" data-copy-text="jwe06120@naver.com">
+              <span class="copy-icon"></span>
+            </button>
+          </li>
         </ul>
       </div>
       <span class="close" id="contact-close"><img src="./img/ico-close.svg" alt="close" /></span>
