--- a/aboutMe.html
+++ b/aboutMe.html
@@ -131,7 +131,8 @@
         </ul>
       </section>
     </div>
-    <a href="#" class="top-btn">TOP</a>
+
+    <button type="button" class="top-btn">TOP</button>
   </main>
 </body>
 
