컨텐츠 내용 추가

--- a/work.html
+++ b/work.html
@@ -184,8 +184,8 @@
           </ul>
         </div>
         <div class="btn-wrap">
-          <a href="#" class="btn-design">Design</a>
-          <a href="#" class="btn-process">Process</a>
+          <a href="https://kimsoobin32.github.io/byeolmaro/" target="_blank" class="btn-design">Design</a>
+          <a href="./workImg/byeolmaroProcess.html" target="_blank" class="btn-process">Process</a>
         </div>
       </div>
     </section>
@@ -293,7 +293,8 @@
           </ul>
         </div>
         <div class="btn-wrap">
-          <a href="#" class="btn-design">Design</a>
+          <a href="https://www.figma.com/proto/uaP9Cpm77UzQaVUEIa5KI1/%EC%8B%9D%EB%AC%BCapp-%EC%99%80%EC%9D%B4%EC%96%B4%ED%94%84%EB%A0%88%EC%9E%84%2C%EB%94%94%EC%9E%90%EC%9D%B8-(Copy)?page-id=790%3A4731&node-id=790-5447&viewport=1308%2C623%2C0.13&t=bdpuWJYQmZrJqo82-1&scaling=scale-down&content-scaling=fixed&starting-point-node-id=790%3A5447"
+            target="_blank" class="btn-design">Design</a>
           <a href="#" class="btn-process">Process</a>
         </div>
       </div>
@@ -312,7 +313,7 @@
       <figure class="project-img">
         <div class="bubble coco"></div>
         <div class="bubble-small"></div>
-        <img src="./img/coco.png" alt="byeolmaro" />
+        <img src="./img/coco.png" alt="coco" />
       </figure>
 
       <div class="project-content">
@@ -348,7 +349,7 @@
           </ul>
         </div>
         <div class="btn-wrap">
-          <a href="#" class="btn-design">Design</a>
+          <a href="workImg/coco.html" target="_blank" class="btn-design">Design</a>
           <a href="#" class="btn-process">Process</a>
         </div>
       </div>
@@ -360,7 +361,7 @@
         <div class="modal-content">
           <!-- <span class="close" id="close">&times;</span> -->
           <span class="close close-graphic" id="close"></span>
-          <img src="./img/graphic-haribo.png" alt="modal image" id="modal-img" />
+          <img src="./img/graphic-cherry.png" alt="modal image" id="modal-img" />
         </div>
       </div>
       <div class="num-indicator">
@@ -377,22 +378,27 @@
           <div class="main-slider">
             <div class="slide">
               <figure class="project-img">
-                <img src="./img/graphic-haribo.png" alt="haribo" />
+                <img src="./img/sun.png" alt="sun" />
               </figure>
             </div>
             <div class="slide">
               <figure class="project-img">
-                <img src="./img/byeolmaro.png" alt="haribo" />
+                <img src="./img/graphic-cherry.png" alt="cherry" />
               </figure>
             </div>
             <div class="slide">
               <figure class="project-img">
-                <img src="./img/graphic-burger.png" alt="haribo" />
+                <img src="./img/graphic-burger.png" alt="burger" />
               </figure>
             </div>
             <div class="slide">
               <figure class="project-img">
-                <img src="./img/black.png" alt="haribo" />
+                <img src="./img/black.png" alt="black" />
+              </figure>
+            </div>
+            <div class="slide">
+              <figure class="project-img">
+                <img src="./img/graphic-check.png" alt="check" />
               </figure>
             </div>
           </div>
