--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>포트폴리오.</title>
+  <title>Surf my Portfolio</title>
+  <link rel="icon" type="image/png" href="./img/surfboard-ico.png" />
   <link rel="stylesheet" href="./css/reset.css" />
   <link rel="stylesheet" href="./css/common.css" />
   <link rel="stylesheet" href="./css/main.css" />
@@ -105,7 +106,7 @@
             <a href="./aboutMe.html">About me</a>
           </li>
           <li>
-            <a href="/work.html">Work</a>
+            <a href="./work.html">Work</a>
           </li>
           <li>
             <a href="#" class="contact-btn">Contact</a>
