--- a/workImg/coco.html
+++ b/workImg/coco.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Coco MicroWebsite</title>
+  <link rel="icon" type="image/png" href="./img/surfboard-ico.png" />
   <link rel="stylesheet" href="../css/reset.css">
   <style>
     .process-pic figure img {
