--- a/workImg/greensweetProcess.html
+++ b/workImg/greensweetProcess.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Green Sweet 프로세스</title>
+  <link rel="icon" type="image/png" href="./img/surfboard-ico.png" />
   <link rel="stylesheet" href="../css/reset.css">
   <link rel="stylesheet" href="../css/sub.css">
 
