그래픽 슬라이드 hover 안내 텍스트

--- a/work.html
+++ b/work.html
@@ -401,27 +401,31 @@
               <a href="./img/sun.png" data-Lightbox="roadtrip">
                 <figure class="project-img">
                   <img src="./img/sun.png" alt="sun" />
+                  <figcaption class="overlay-text">View Image!</figcaption>
                 </figure>
               </a>
             </div>
             <div class="slide">
               <a href="./img/graphic-burger.png" data-Lightbox="roadtrip">
                 <figure class="project-img">
-                  <img src="./img/graphic-burger.png" alt="sun" />
+                  <img src="./img/graphic-burger.png" alt="burger" />
+                  <figcaption class="overlay-text">View Image!</figcaption>
                 </figure>
               </a>
             </div>
             <div class="slide">
               <a href="./img/black.png" data-Lightbox="roadtrip">
                 <figure class="project-img">
-                  <img src="./img/black.png" alt="sun" />
+                  <img src="./img/black.png" alt="black" />
+                  <figcaption class="overlay-text">View Image!</figcaption>
                 </figure>
               </a>
             </div>
             <div class="slide">
               <a href="./img/graphic-cherry.png" data-Lightbox="roadtrip">
                 <figure class="project-img">
-                  <img src="./img/graphic-cherry.png" alt="sun" />
+                  <img src="./img/graphic-cherry.png" alt="cherry" />
+                  <figcaption class="overlay-text">View Image!</figcaption>
                 </figure>
               </a>
             </div>
