디자인 수정

--- a/work.html
+++ b/work.html
@@ -219,7 +219,7 @@
       <figure class="project-img">
         <div class="bubble starship"></div>
         <div class="bubble-small"></div>
-        <!-- <img src="./img/starship2.svg" alt="byeolmaro" /> -->
+        <img src="./img/starship2.png" alt="starship" />
       </figure>
 
       <div class="project-content">
