텍스트 수정

--- a/work.html
+++ b/work.html
@@ -122,13 +122,9 @@
 
       <div class="content-wrap">
         <article>
-          <h3>계절이 지나가는 하늘</h3>
+          <h3>빛나는 노력의 결과물</h3>
           <p>
-            계절이 지나가는 하늘에는 가을로 가득 차 있습니다. 나는 아무 걱정도
-            없이 가을 속의 별들을 다 헬 듯합니다. 가슴 속에 하나 둘 새겨지는
-            별을 이제 다 못 헤는 것은 쉬이 아침이 오는 까닭이요, 내일 밤이
-            남은 까닭이요, 아직 나의 청춘이 다하지 않은 까닭입니다. 계절이
-            지나가는 하늘에는 가을로 가득 차 있습니다.
+            2024.02.14 ~ 07.04 UX/UI Figma 웹디자인 & 웹퍼블리셔 교육과정 약 5개월의 기간 동안 진행한 작업물입니다.
           </p>
         </article>
         <ul class="index-list">
@@ -174,7 +170,7 @@
           <h2>별마로 천문대</h2>
           <p>
             효율적인 컨텐츠의 배치와 관련 이미지의 적극적인 사용을 중점으로
-            하여 별마로 천문대 웹사이트룰 리디자인했고 반응형 사이트로
+            하여 별마로 천문대 웹사이트룰 리디자인했고 반응형 웹사이트로
             구현하였습니다.
           </p>
         </div>
@@ -183,7 +179,7 @@
             <li>
               <dl>
                 <dt>DATE</dt>
-                <dd>24.07~</dd>
+                <dd>24.05~0.6 (1 month)</dd>
               </dl>
             </li>
             <li>
@@ -227,9 +223,10 @@
           <h2>02.</h2>
           <h2>Starship Ent</h2>
           <p>
-            계절이 지나가는 하늘에는 가을로 가득 차 있습니다. 나는 아무 걱정도
-            없이 가을 속의 별들을 다 헬 듯합니다. 가슴 속에 하나 둘 새겨지는
-            별을 이제 다 못 헤는 것은 쉬이 아침이 오는 까닭이요
+            엔터테인먼트라는 주제에 맞게 좀 더 생동감 있게 기존 사이트를 리디자인하였으며 기존 사이트 메인 컬러를 포인트 컬러로 사용하였습니다.
+            반응형 웹사이트로 구현하였습니다.
+
+
           </p>
         </div>
         <div class="project-info">
@@ -237,7 +234,7 @@
             <li>
               <dl>
                 <dt>DATE</dt>
-                <dd>24.07~</dd>
+                <dd>24.07 (3 week)</dd>
               </dl>
             </li>
             <li>
@@ -292,7 +289,7 @@
             <li>
               <dl>
                 <dt>DATE</dt>
-                <dd>24.07~</dd>
+                <dd>24.05 (1 month)</dd>
               </dl>
             </li>
             <li>
@@ -338,9 +335,9 @@
           <h2>04.</h2>
           <h2>Micro Website</h2>
           <p>
-            계절이 지나가는 하늘에는 가을로 가득 차 있습니다. 나는 아무 걱정도
-            없이 가을 속의 별들을 다 헬 듯합니다. 가슴 속에 하나 둘 새겨지는
-            별을 이제 다 못 헤는 것은 쉬이 아침이 오는 까닭이요
+            디즈니 영화 [코코]를 주제로 마이크로 웹사이트를 디자인 하였습니다.
+            영화에 등장하는 '죽은 자들의 날 축제'를 컨셉으로 주황, 보라 계열 컬러와 화려한 분위기를 중점으로 작업하였습니다.
+
           </p>
         </div>
         <div class="project-info">
@@ -348,19 +345,19 @@
             <li>
               <dl>
                 <dt>DATE</dt>
-                <dd>24.07~</dd>
+                <dd>24.03 (1 week)</dd>
               </dl>
             </li>
             <li>
               <dl>
                 <dt>ROLE</dt>
-                <dd>기획, 디자인, 코딩</dd>
+                <dd>기획, 디자인</dd>
               </dl>
             </li>
             <li>
               <dl>
                 <dt>TOOLS</dt>
-                <dd>Figma, Vscode</dd>
+                <dd>Photoshop, Illustrator</dd>
               </dl>
             </li>
           </ul>
@@ -454,7 +451,7 @@
               <li>
                 <dl>
                   <dt>DATE</dt>
-                  <dd>24.07~</dd>
+                  <dd>24.06~</dd>
                 </dl>
               </li>
               <li>
