--- a/workImg/coco.html
+++ b/workImg/coco.html
@@ -7,9 +7,19 @@
   <title>Coco MicroWebsite</title>
   <link rel="icon" type="image/png" href="./img/surfboard-ico.png" />
   <link rel="stylesheet" href="../css/reset.css">
+  <link rel="stylesheet" href="../css/sub.css">
   <style>
     .process-pic figure img {
       width: 100%;
+    }
+
+    /* top 버튼 스타일 */
+    .top-btn {
+      background-color: #F2921D;
+    }
+
+    .top-btn:hover {
+      background-color: #86d3e7;
     }
   </style>
 </head>
@@ -18,6 +28,32 @@
   <div class="process-pic">
     <figure><img src="../img/micro-coco.jpg" alt="코코 마이크로웹사이트"></figure>
   </div>
+  <!-- Top 버튼 추가 -->
+  <button class="top-btn" id="top-btn">Top</button>
+
+  <script>
+    // JavaScript로 스크롤 애니메이션 구현
+    document.addEventListener('DOMContentLoaded', function () {
+      const topBtn = document.getElementById('top-btn');
+
+      // 스크롤 이벤트 리스너
+      window.addEventListener('scroll', function () {
+        if (window.scrollY > 200) {
+          topBtn.classList.add('show');
+        } else {
+          topBtn.classList.remove('show');
+        }
+      });
+
+      // 버튼 클릭 이벤트 리스너
+      topBtn.addEventListener('click', function () {
+        window.scrollTo({
+          top: 0,
+          behavior: 'smooth'
+        });
+      });
+    });
+  </script>
 </body>
 
 </html>
