디자인 수정

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -12,6 +12,7 @@
   <script src="./js/jquery-3.3.1.min.js"></script>
   <script src="./js/modal.js"></script>
 </head>
+<!-- lenis.js => 부드러운 스크롤 scrolltrigger -->
 
 <body>
   <a href="#container" class="skip hidden">본문 바로가기</a>
