--- a/work.html
+++ b/work.html
@@ -215,7 +215,7 @@
       <figure class="project-img">
         <div class="bubble starship"></div>
         <div class="bubble-small"></div>
-        <img src="./img/starship2.png" alt="starship" />
+        <img src="./img/starship-mockup.png" alt="starship" />
       </figure>
 
       <div class="project-content">
@@ -270,7 +270,7 @@
       <figure class="project-img">
         <div class="bubble greensweet"></div>
         <div class="bubble-small"></div>
-        <img src="./img/greensweetpng.png" alt="byeolmaro" />
+        <img src="./img/greensweetpng2.png" alt="byeolmaro" />
       </figure>
 
       <div class="project-content">
