work 파비콘 경로 수정, 스타쉽 프로세스 추가

--- a/work.html
+++ b/work.html
@@ -234,7 +234,7 @@
             <li>
               <dl>
                 <dt>DATE</dt>
-                <dd>24.07 (3 week)</dd>
+                <dd>24.06 (3 week)</dd>
               </dl>
             </li>
             <li>
@@ -252,8 +252,8 @@
           </ul>
         </div>
         <div class="btn-wrap">
-          <a href="#" class="btn-design">Design</a>
-          <a href="#" class="btn-process">Process</a>
+          <a href="http://storyk.dothome.co.kr/starship-ent" target="_blank" class="btn-design">Design</a>
+          <a href="./workImg/starshipProcess.html" target="_blank" class="btn-process">Process</a>
         </div>
       </div>
     </section>
