process이미지 max-width 고정

--- a/workImg/starshipProcess.html
+++ b/workImg/starshipProcess.html
@@ -9,8 +9,14 @@
   <link rel="stylesheet" href="../css/reset.css">
   <link rel="stylesheet" href="../css/sub.css">
   <style>
+    .process-pic {
+      max-width: 1920px;
+      margin: 0 auto;
+    }
+
     .process-pic figure img {
       width: 100%;
+
     }
 
     /* top 버튼 스타일 */
