--- a/workImg/coco.html
+++ b/workImg/coco.html
@@ -9,6 +9,11 @@
   <link rel="stylesheet" href="../css/reset.css">
   <link rel="stylesheet" href="../css/sub.css">
   <style>
+    .process-pic {
+      max-width: 1920px;
+      margin: 0 auto;
+    }
+
     .process-pic figure img {
       width: 100%;
     }
