--- a/workImg/greensweetProcess.html
+++ b/workImg/greensweetProcess.html
@@ -10,6 +10,11 @@
   <link rel="stylesheet" href="../css/sub.css">
 
   <style>
+    .process-pic {
+      max-width: 1920px;
+      margin: 0 auto;
+    }
+
     .process-pic figure img {
       width: 100%;
     }
