그래픽 이미지 추가

--- a/work.html
+++ b/work.html
@@ -420,6 +420,15 @@
               </a>
             </div>
             <div class="slide">
+              <a href="./img/graphic-travel.jpg" data-Lightbox="roadtrip">
+                <figure class="project-img">
+                  <img src="./img/graphic-travel.jpg" alt="black" />
+                  <figcaption class="overlay-text">View Image!</figcaption>
+                </figure>
+              </a>
+            </div>
+
+            <div class="slide">
               <a href="./img/graphic-cherry.png" data-Lightbox="roadtrip">
                 <figure class="project-img">
                   <img src="./img/graphic-cherry.png" alt="cherry" />
