--- a/work.html
+++ b/work.html
@@ -252,8 +252,7 @@
           </ul>
         </div>
         <div class="btn-wrap">
-          <!-- https://kimsoobin32.github.io/starship-entertainment/ -->
-          <a href="http://storyk.dothome.co.kr/starship-ent" target="_blank" class="btn-design">Design</a>
+          <a href="https://kimsoobin32.github.io/starship-entertainment/" target="_blank" class="btn-design">Design</a>
           <a href="./workImg/starshipProcess.html" target="_blank" class="btn-process">Process</a>
         </div>
       </div>
