이미지 교체

--- a/workImg/byeolmaroProcess.html
+++ b/workImg/byeolmaroProcess.html
@@ -31,7 +31,7 @@
 
 <body>
   <div class="process-pic">
-    <figure><img src="../img/process-byeolmaro.jpg" alt="별마로 프로세스"></figure>
+    <figure><img src="../img/process-byeolmaro2.jpg" alt="별마로 프로세스"></figure>
   </div>
   <!-- Top 버튼 추가 -->
   <button class="top-btn" id="top-btn">Top</button>
